--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ description: > # this means to ignore newlines until "baseurl:"
   
   
   
-baseurl: "/cards" # the subpath of your site, e.g. /blog
-url: "http://webjeda.com" # the base hostname & protocol for your site
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://juniorcesarabreu.tk" # the base hostname & protocol for your site
 
 #sidebar
 default-image: webjeda-logo-big.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
@@ -32,21 +32,21 @@ paginate: 6
 paginate_path: /page:num/
 
 # Tracker
-analytics: UA-83979019-1
+analytics: 
 
 # Comments
-disqus-shortname: webjeda-demo
+disqus-shortname: juniorcesarabreu-history
 
 #social
-facebook: http://facebook.com/webjeda
-quora: http://quora.com/sharathdt
-twitter: http://twitter.com/@webjeda
-github: http://github.com/webjeda
+facebook: http://facebook.com/juniorcesarabreu.sg
+quora: http://quora.com/juniorcesarabreu
+twitter: http://twitter.com/@juniorcesarsg
+github: http://github.com/juniorcesarabreu
 
 #facebook like box
-fb-app-id: 549480635219583
-fb-page-url: https://www.facebook.com/webjeda/
-fb-page-title: webjeda
+#fb-app-id: 549480635219583
+fb-page-url: https://www.facebook.com/juniorcesarabreu.sg/
+fb-page-title: juniorcesarabreu
 
 # Sass style
 sass:
