--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,25 @@
-# Welcome to Jekyll!
+# Bem vindo a Jekyll!
 #
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# Este arquivo de configuração é destinado para configurações que afetam seu blog
+# inteiro, valores que você espera configurar uma vez e raramente precisa editar
+# após isto.
+# Por razões técnicas, este arquivo *NÂO* é recarregado automaticamente quando
+# você usa 'jekyll serve'. Se você mudar este arquivo, por favor, reinicie o
+# processo do servidor.
 
-# Site settings
-title: Webjeda cards
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Webjeda Cards is a Bootstrap based jekyll theme for portfolio, photography or any kind of blog.
-  
-  
-  
-baseurl: "/blog-history" # the subpath of your site, e.g. /blog
-url: "https://juniorcesarabreu.tk" # the base hostname & protocol for your site
+# Configurações do site
+title: História da Computação
+email: juniorabreuantispam@outlook.com
+description: > # Isto significa ignorar quebras de linhas até "baseurl:"
+  Webjeda Cards é um tema jekyll baseado em Bootstrap para portfólio, fotografia ou qualquer tipo de blog.
+
+
+
+baseurl: "/blog-history" # O subcaminho de seu site, e.g. /blog
+url: "https://juniorcesarabreu.tk" # O nome de domínio & protocolo para seu site
 
 #sidebar
-default-image: webjeda-logo-big.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
+default-image: webjeda-logo-big.jpg # Se há nenhuma imagem de destaque em um post então esta imagem será exibida. Também em todas as páginas esta imagem será exibida. Use uma imagem 500x250.
 
 #footer
 built-by: webjeda
@@ -32,10 +34,10 @@ paginate: 6
 paginate_path: /page:num/
 
 # Tracker
-analytics: 
+analytics:
 
 # Comments
-disqus-shortname: juniorcesarabreu-history
+disqus-shortname: juniorcesarabreu
 
 #social
 facebook: http://facebook.com/juniorcesarabreu.sg
@@ -54,4 +56,3 @@ sass:
 
 # Ruby Gems
 plugins: [jekyll-paginate, jekyll-seo-tag]
-
